--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,5 @@
         "guzzlehttp/promises": "^1.3",
         "php": ">=7.2.0"
     },
-    "license": "Propriatary"
+    "license": "proprietary"
 }
