--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
         "guzzlehttp/promises": "^1.3",
         "php": ">=7.2.0"
     },
-    "license": "proprietary"
+    "license": "proprietary",
+    "autoload": {
+        "psr-4": {
+            "Quadrotech\\CMS\\": "src/"
+        }
+    }
 }
